# ml-in-cpp

./: CMakeLists.txt  README.md
ml/: AbstractRegressionModel.hpp  LinearRegressionModel.cpp  LinearRegressionModel.hpp  Stdafx.hpp  enums.hpp  exceptions.hpp
